--- a/src/components/footer/styles.module.css
+++ b/src/components/footer/styles.module.css
@@ -1,22 +1,24 @@
-.footer {
+footer {
   background-color: #262626;
   position: absolute;
   bottom: 0;
+  width: 100%;
+  
+}
+
+.footerContainer {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   height: 5vh;
-}
-
-footer{
-  margin-top: 2rem;
 }
 
 p {
   margin-bottom: 0;
 }
 
-.footer a {
+.footerContainer a {
   color: white;
   margin-left: 0.75rem;
 }
